kubernetes/apps/observability/victoria-metrics/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vmsingle
spec:
  hostnames:
    - prometheus.${CLUSTER_DOMAIN}
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: vmsingle-vm
          port: 8428
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vmalertmanager
spec:
  hostnames:
    - alertmanager.${CLUSTER_DOMAIN}
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: vmalertmanager-vm
          port: 9093
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vmalert
spec:
  hostnames:
    - vmalert.${CLUSTER_DOMAIN}
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: vmalert-vm
          port: 8080
